css.css
*{box-sizing: border-box;
    padding: 0px;
    margin: 0px;
}
body{
    background:white;
}
  .header-nav-img{
      background-image: url(/assets/Guadavi.jpg);
      background-repeat: repeat;
      height: 600px;
  }
 p, h1, h2, h3, h4, button ,label {
    font-family: 'Zen Kaku Gothic New', sans-serif;
 }
  .header h1{
    padding-top: 0.5%;
    background:linear-gradient( rgb(87, 85, 85) , rgba(0, 0, 255, 0) 100%);
    color: rgb(255, 255, 255);
    position: sticky; top: 0;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
  }
  /* Start Nav Code*/
  .nav-bar{
      background-color: rgba(255, 255, 255, 0.568);
      margin-top: 10px;
      justify-content: center;
      padding: 0.5%;
      display: flex;
      border: rgb(255, 255, 255) 5px solid;
      position: sticky;top: 0px;
  }
  .nav-bar button{
      border: none ;
      color: rgb(0, 0, 0);
      font-size: 20px;
      font-weight: 400;
      background: rgba(255, 255, 255, 0);
      padding: 0% 5%;
 
  }
  .pc-button:hover{
      position: relative;
      cursor: pointer;
     animation: hovernav 1s infinite ease-in-out;
    
  }
a {
    text-decoration: none;
    color: inherit;
}
 
  /* end Nav Code*/

           /* Start Grid Code For Introduction Gallery*/
.grid-title{
text-align: center;
padding-top: 1em;
color: rgb(0, 0, 0);
font-size: 3em;
}
.grid-title h2 {
    width: 35%;
    margin: auto;
    background-image: linear-gradient(45deg, #b6b6b6 , #9b9b9b 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; 
    position: relative;
    animation: Title 10s infinite ease-in-out;
}

 .grid-gallery{
     margin-top: 50px;
     background-color: inherit;
     display:grid;
     width: 85%;
     margin: auto;
     margin-top: 50px;
     grid-template-columns:50% 50%;
     grid-template-rows: auto;
     grid-gap: 15px;
     grid-template-areas: 
     "col1 col2"
 }

 .column1{
     grid-area: col1;
 }

 .column1 img{
    width: 100%;
    padding-top: 2em;
} 

 .column2{
     grid-area: col2;
 }

 .column2 img{
    width: 100%;
    padding-top: 2em;
 }

       /* end Grid Code For Introduction Gallery*/
.middle-image{
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    padding-bottom: 3em;
    
}
.middle-image h2 {
    font-size: 4em;
    padding-top: 25px;
}
.middle-image img{
width: 85%;
margin: auto;
}





 /* START Seccion form */
 .whole-form{
    display: flex;
    background: radial-gradient(#e7e7e7, #b6b6b6);
    padding:5em 0px
}

.form-body label{
    font-weight: 500;
}

.form-body div {
    width: 100%;
    margin: auto;
    border:inherit;
    background-color: white;
    margin-top: 2em;
 }

 .form-body{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
     background-color: rgb(255, 255, 255);
     margin: auto;
     border-radius: 10px;
     padding: 3em 15% ;    
 }

.consulta input{
    height: 250px;
width: 100%;
}

.form-body .submit{
    padding-top: 25px;
    display: flex;
}

.submit button{
    align-self: flex-end;
    position: relative;
    margin-top: 3em;
    border: solid rgb(0, 0, 0) 2px;
    border-radius: 50px;
    background-color: rgb(255, 255, 255);
    color: rgb(0, 0, 0);
    padding: 10px 40px;
    margin: auto;
    animation: button 1s linear infinite;
}

.submit button:hover{
top: 5px;
box-shadow:0px 5px 1px black ;
cursor: pointer;
}
@keyframes button {
   
}


 /* END Seccion form */
.footer {
    display: flex;
    flex-direction: column;
    background-color: black;
    color: white;
  padding: 2em 0em;
}
.footer a {
    color: white;
    font-size: 25px;
    text-decoration: none;
    position: relative;
}
.footer button {
    background: inherit;
    border: none;
    margin-top: 10px;
}
.footer a:hover{
    animation: this infinite linear 1s;
}
@keyframes this {
    0% {color: #9b9b9b ,; bottom:0px}
    25% {color: #9b9b9b ,; bottom:5px}
    75% {color: #9b9b9b ,; bottom:5px}
    100%{ color: #9b9b9b; bottom:0px}
    
}


/*  Media Quwerysss*/

@media only screen and (max-width: 768px) {
  /* For mobile phones: */
  [class*="col-"] {
    width: 100%;
  }
  .nav-bar .pc-button{
      display: none;
  }
  .nav-bar{
      justify-content: center;
  }
  .grid-gallery{
    grid-template-columns:auto;
      grid-template-areas:
      "col1"
      "col2";
  }
  .nav-bar{
    position:static;
  }

  /* nav bar desplegable*/
  ul {
    list-style: none;
}

.menu button {
    margin: auto;
    cursor: pointer;
    display: flex;
    align-items: center;
    margin-top: -20px;
    padding: 10px;
}

.submenu button {
    padding: 10px 0px;
}
.submenu {
    display: none;
    padding: 40px 11em;
}

.menu button:focus + .submenu {
    display: flex;
    border: solid 2px black;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    margin-top: 20px;
   animation: ;
} 

   /* nav bar desplegable*/
  
}

/* pc Queries*/
@media only screen and (min-width: 768px) {
    .menu-phone,.phonedrop{
       display: none; 
    }
    @keyframes Title {
        0% {left: -600px;    
             }
        50% { left: 600px ;
             }
        100% {left: -600px; }
        }
.consulta {
 
 float: right;
    
}
.form-space{
    float: left;
}
@keyframes hovernav {
    0%{ top: 5px;}
    100%{ top: 5px;}
}
        
/* For desktop: */
.col-1 {width: 8.33%;}
.col-2 {width: 16.66%;}
.col-3 {width: 25%;}
.col-4 {width: 33.33%;}
.col-5 {width: 41.66%;}
.col-6 {width: 50%;}
.col-7 {width: 58.33%;}
.col-8 {width: 66.66%;}
.col-9 {width: 75%;}
.col-10 {width: 83.33%;}
.col-11 {width: 91.66%;}
.col-12 {width: 100%;}
}

    

